标签  热门搜索

--- a/UICollectionViewDemo/Podfile
+++ b/UICollectionViewDemo/Podfile
@@ -1,5 +1,8 @@
-platform :ios, ‘8.0’ use_frameworks!
-   target 'UICollectionViewDemo' do
+ platform :ios, ‘8.0’
+     use_frameworks!
+
+ target 'UICollectionViewDemo' do
      pod 'Masonry'
      pod 'YYImage'
-end
+     pod 'YYModel'
+ end
